client/stylesheets/main.less
.main {
  padding: 10px;
  max-height: none;
  height: calc(~'100% - 50px');
  background-color: #f5f5f5;
  .job {
    width: calc(~'100% - 5px');
    padding-left: 5px;
    .job-header {
      padding-bottom: 15px;
      font-size: 20px;
      .job-number, .shipper, .consignee {
        font-weight: bold;
      }
      .job-number {
        position: absolute;
      }
    }
    .job-movement {
      padding-bottom: 15px;
      .movement-icon {
        font-size: 32px;
      }
    }
    .job-cargo {
      .cargo-container {
        border-radius: 5px;
        background-color: #ddd;
        padding-top: 3px;
        padding-bottom: 3px;
        margin-bottom: 5px;
        .container-header {
          padding-top: 3px;
          padding-bottom: 3px;
          margin-left: 0px;
          margin-right: 0px;
        }
        .cargo-package {
          border-radius: 5px;
          background-color: #c9c9c9;
          margin-left: 10px;
          margin-right: 10px;
          .row {
            padding-top: 3px;
            padding-bottom: 3px;
            margin-bottom: 6px;
            margin-left: -10px;
            margin-right: -10px;
          }
        }
      }
    }
  }
}

